[project]
name = "async-gui-ipython-kernel"
version = "0.0.2"

description = "Allows GUI events to be processed while the IPython kernel is processing a cell"

readme = "README.md"
keywords = []

dependencies = [
  "ipykernel==6.29.5",
  "jupyter_client==8.6.3"]

requires-python = ">= 3.10"


[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
